--- a/contact us.html
+++ b/contact us.html
@@ -6,8 +6,9 @@
     <title>Contact us</title>
 </head>
 <body>
-    <h1>Contact us
-        
-    </h1>
+    <h1>Contact us</h1>
+    <div class="name">
+    <input type="text" value="name" >
+    </div>
 </body>
 </html>
